--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,6 +5,13 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
+env:
+  DETECT_PROJECT_NAME: ocean_action
+  DETECT_PROJECT_VERSION_NAME: main
+  DETECT_TOOLS: DETECTOR
+  DETECT_TIMEOUT: 3000
+  
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -20,3 +27,14 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "This job's status is ${{ job.status }}."
+
+      - name: Black Duck (Rapid scan)
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: synopsys-sig/synopsys-action@v1.2.0
+        with:
+          blackduck_scan_full: false
+          blackduck_automation_prcomment: true
+          include_diagnostics: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          blackduck_url: ${{ secrets.BLACKDUCK_URL }}
+          blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
