--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -45,6 +45,7 @@ jobs:
           DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
         with:
           blackduck_scan_full: false
+          blackduck_automation_fixpr: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           blackduck_url: ${{ secrets.BLACKDUCK_URL }}
           blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
