--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,43 +1,31 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions
-on: 
+name: Synopsys Security Testing
+
+on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+  
 env:
-  DETECT_PROJECT_NAME: ocean_action
+  DETECT_PROJECT_NAME: ocean-action
   DETECT_PROJECT_VERSION_NAME: main
   DETECT_TOOLS: DETECTOR
   DETECT_TIMEOUT: 3000
   
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}."
-
       - name: Checkout
         uses: actions/checkout@v2
-
+        
       - name: install dependency
         uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'npm'
       - run: npm install --no-audit --no-fund --silent
-
+      
       - name: Black Duck (Rapid scan)
         if: ${{ github.event_name == 'pull_request' }}
         uses: synopsys-sig/synopsys-action@v1.2.0
@@ -46,6 +34,8 @@ jobs:
         with:
           blackduck_scan_full: false
           blackduck_automation_prcomment: true
+          
+          include_diagnostics: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           blackduck_url: ${{ secrets.BLACKDUCK_URL }}
           blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
