--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         
       - name: install dependency
         uses: actions/setup-node@v3
@@ -24,15 +24,15 @@ jobs:
           cache: 'npm'
       - run: npm install --no-audit --no-fund --silent
       
-      - name: Black Duck (Rapid scan)
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: synopsys-sig/synopsys-action@v1.2.0
-        env:
-          DETECT_BLACKDUCK_RAPID_COMPARE_MODE: BOM_COMPARE_STRICT
-        with:
-          blackduck_scan_full: false
-          blackduck_automation_prcomment: true
-          
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          blackduck_url: ${{ secrets.BLACKDUCK_URL }}
-          blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
+      - name: Black Duck PR Scan
+      if: ${{ github.event_name == 'pull_request' }}
+      uses: synopsys-sig/synopsys-action@v1.2.0
+      env:
+        DETECT_EXCLUDED_DETECTOR_TYPES: GIT
+      with:
+        blackduck_url: ${{ secrets.BLACKDUCK_URL }}
+        blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
+        blackduck_scan_full: false
+        blackduck_automation_prcomment: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
