--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,15 +14,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: install dependency
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'npm'
-        run: npm install --no-audit --no-fund --silent
-      - name: Black Duck PR Scan
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: install dependency
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+        cache: 'npm'
+    - run: npm install --no-audit --no-fund --silent
+    - name: Black Duck PR Scan
       if: ${{ github.event_name == 'pull_request' }}
       uses: synopsys-sig/synopsys-action@v1.2.0
       env:
