--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,7 +6,7 @@ on:
   
 env:
   DETECT_PROJECT_NAME: ocean_action
-  DETECT_PROJECT_VERSION_NAME: main
+  DETECT_PROJECT_VERSION_NAME: 3.0
   DETECT_TOOLS: DETECTOR
   DETECT_TIMEOUT: 3000
   
