--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,6 +28,7 @@ jobs:
       env:
         DETECT_EXCLUDED_DETECTOR_TYPES: GIT
       with:
+        include_diagnostics: true
         blackduck_url: ${{ secrets.BLACKDUCK_URL }}
         blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
         blackduck_scan_full: false
